--- a/assets/css/mainwp-semantic.css
+++ b/assets/css/mainwp-semantic.css
@@ -142,6 +142,5 @@
 .mainwp-ui .ui.multiple.dropdown > .label {
   vertical-align: baseline;
 }
-
-.mainwp-ui .mainwp-main-content .ui.checkbox .box::after,
-.mainwp-ui .mainwp-main-content .ui.checkbox label::after { top: 1px; left: 1px; }
+.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) .box::after,
+.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) label::after { top: 1px; left: 1px; }
