* Added: UK representative to privacy policy * Fixed: PHP warning `Undefined array key 'privacy'` * Fixed: Incomplete error message that appears after trying to reconnect a site * Updated: Plugin Privacy Policy page * Updated: `privacy-policy.txt` file * Updated: `mainwp-child-privacy-policy.txt` file * Updated: Main content area border removed

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -7,7 +7,6 @@
   width: calc( 100% - 298px );
     padding-right: 1em;
   padding-bottom: 1em;
-  border-left: 1px solid #dadada;
   border-right: 1px solid #dadada;
   float: left;
   margin-right: -1px !important;
@@ -41,6 +40,8 @@
 .mainwp-sidebar-left .mainwp-main-content {
     float: right;
     padding-left: 1em;
+    border-left: 1px solid #dadada;
+    border-right: 0px solid #dadada !important;
 }
 
 .mainwp-sidebar-accordion .title {
