--- a/assets/css/mainwp-semantic.css
+++ b/assets/css/mainwp-semantic.css
@@ -143,4 +143,6 @@
   vertical-align: baseline;
 }
 .mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) .box::after,
-.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) label::after { top: 1px; left: 1px; }
+.mainwp-ui .mainwp-main-content .ui.checkbox:not( .slider ) label::after,
+.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) .box::after,
+.mainwp-ui  #mainwp-manage-sites-content .ui.checkbox:not( .slider ) label::after { top: 1px; left: 1px; }
