--- a/assets/css/mainwp-responsive-layouts.css
+++ b/assets/css/mainwp-responsive-layouts.css
@@ -17,6 +17,20 @@
 
 @media screen and ( max-width: 768px ) {
 
+	.mainwp-ui table .menu.transition.visible {
+		top: 0 !important;
+		left: 0 !important;
+		position: relative !important;
+		width: 100% !important;
+		background: none !important;
+		box-shadow: none !important;
+		border: 0px solid #fff !important;
+	}
+
+	.mainwp-ui table .menu.transition.visible:after {
+		display: none !important;
+	}
+
 	/*--- WP Overrides ---*/
 
 	.mainwp-ui #wpcontent,
